[package]
name = "contract"
version = "0.1.0"
edition = "2024"

[lib]
name = "contract"
create-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[profile.release]
codegen-units = 1

[dependencies]
solana-program = "=2.0.3"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }